# devbackup

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
devbackup/: __init__.py  backup.py  battery.py  cli.py  config.py  cursor_integration.py  daemon.py  defaults.py  destination.py  discovery.py  health.py  ipc.py  language.py  lock.py  logger.py  mcp_server.py  menubar_app.py  notify.py  preferences_ui.py  progress.py  queue.py  retention.py  retry.py  scheduler.py  signal_handler.py  snapshot.py  space.py  verify.py
docs/: USER_GUIDE.md
installer/: install.command
tests/: __init__.py  conftest.py  test_backup.py  test_backup_properties.py  test_cli.py  test_cli_properties.py  test_config.py  test_cursor_integration.py  test_defaults_properties.py  test_destination.py  test_discovery_properties.py  test_graceful_degradation.py  test_health_properties.py  test_integration.py  test_ipc_properties.py  test_language_properties.py  test_lock.py  test_lock_properties.py  test_logger.py  test_logger_properties.py  test_mcp_properties.py  test_mcp_server.py  test_notify_properties.py  test_privacy_properties.py  test_progress.py  test_queue_properties.py  test_retention.py  test_retention_properties.py  test_retry_properties.py  test_scheduler.py  test_scheduler_properties.py  test_signal_handler.py  test_signal_handler_properties.py  test_smart_scheduling_properties.py  test_snapshot.py  test_snapshot_properties.py  test_space.py  test_space_properties.py  test_verify_properties.py
