[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devbackup"
version = "0.1.0"
description = "Automatic incremental backups for developers on macOS - with menu bar app and Cursor AI integration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "DevBackup Contributors"}
]
keywords = [
    "backup",
    "incremental",
    "rsync",
    "macos",
    "mcp",
    "cursor",
    "development",
    "snapshot",
    "time-machine",
    "hard-links",
    "menu-bar",
    "developer-tools"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development",
    "Typing :: Typed",
]

dependencies = [
    "mcp>=1.0.0,<2.0.0",
    "rumps>=0.4.0; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/chieflatif/devbackup"
Documentation = "https://github.com/chieflatif/devbackup#readme"
Repository = "https://github.com/chieflatif/devbackup.git"
Issues = "https://github.com/chieflatif/devbackup/issues"
Changelog = "https://github.com/chieflatif/devbackup/blob/main/CHANGELOG.md"

[project.scripts]
devbackup = "devbackup.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["devbackup*"]

[tool.setuptools.package-data]
devbackup = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.hypothesis]
max_examples = 50
deadline = 10000

[tool.coverage.run]
source = ["devbackup"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["devbackup"]
